deploy/k8s/minio.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: ember-trove
spec:
  serviceName: minio
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio
          args: ["server", "/data", "--console-address", ":9001"]
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
            - name: miniodata
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: miniodata
      spec:
        accessModes: [ReadWriteOnce]
        resources:
          requests:
            storage: 50Gi
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: ember-trove
spec:
  clusterIP: None
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
    - name: console
      port: 9001
